# Quake-2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CopyBinaries.bat  CtoCPP.py  FixHeaders.py  Quake-2.code-workspace  README.MD  ReplaceTabsWithSpaces.py  TODO.txt  Workspace.code-workspace  p.txt  quake2-dupl.dqp  workspace.code-workspace
client/: CMakeLists.txt  adivtab.h  adivtab.hpp  anorms.h  anorms.hpp  asm_i386.h  asm_i386.hpp  block16.hpp  block8.h  block8.hpp  cdaudio.h  cdaudio.hpp  cl_cin.c  cl_cin.cpp  cl_ents.c  cl_ents.cpp  cl_fx.c  cl_fx.cpp  cl_input.c  cl_input.cpp  cl_inv.c  cl_inv.cpp  cl_main.c  cl_main.cpp  cl_newfx.c  cl_newfx.cpp  cl_parse.c  cl_parse.cpp  cl_pred.c  cl_pred.cpp  cl_scrn.c  cl_scrn.cpp  cl_tent.c  cl_tent.cpp  cl_view.c  cl_view.cpp  client.cpp  client.h  client.hpp  console.c  (+33 more)
ctf/: CMakeLists.txt  g_ai.c  g_ai.cpp  g_chase.c  g_chase.cpp  g_cmds.c  g_cmds.cpp  g_combat.c  g_combat.cpp  g_ctf.c  g_ctf.cpp  g_ctf.h  g_ctf.hpp  g_func.c  g_func.cpp  g_items.c  g_items.cpp  g_local.h  g_local.hpp  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_monster.c  g_monster.cpp  g_phys.c  g_phys.cpp  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.cpp  g_target.c  g_target.cpp  g_trigger.c  g_trigger.cpp  g_utils.c  g_utils.cpp  g_weapon.c  g_weapon.cpp  (+23 more)
ctf/inc/ctf/: g_local.h
ctf/src/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  m_move.c  p_client.c  p_hud.c  p_menu.c  p_trail.c  p_view.c  p_weapon.c  q_shared.c
game/: CMakeLists.txt  g_ai.c  g_ai.cpp  g_chase.c  g_chase.cpp  g_cmds.c  g_cmds.cpp  g_combat.c  g_combat.cpp  g_func.c  g_func.cpp  g_items.c  g_items.cpp  g_local.h  g_local.hpp  g_main.c  g_main.cpp  g_main.h  g_main.hpp  g_misc.c  g_misc.cpp  g_monster.c  g_monster.cpp  g_phys.c  g_phys.cpp  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.c  g_svcmds.cpp  g_target.c  g_target.cpp  g_trigger.c  g_trigger.cpp  g_turret.c  g_turret.cpp  g_utils.c  g_utils.cpp  g_weapon.c  (+97 more)
game-shared/: CMakeLists.txt
game-shared/inc/game-shared/: config.h  physics.h
game-shared/src/: physics.cpp
irix/: cd_irix.c  cd_irix.cpp  glw_imp.cpp  q_shirix.c  q_shirix.cpp  qgl_irix.cpp  snd_irix.c  snd_irix.cpp  sys_irix.c  sys_irix.cpp  vid_menu.c  vid_menu.cpp  vid_so.c  vid_so.cpp
linux/: block16.h  block16.hpp  block8.h  block8.hpp  cd_linux.c  cd_linux.cpp  d_ifacea.h  d_ifacea.hpp  gl_fxmesa.c  gl_fxmesa.cpp  glob.cpp  glob.h  glob.hpp  in_linux.cpp  net_udp.c  net_udp.cpp  q_shlinux.c  q_shlinux.cpp  qasm.h  qasm.hpp  qgl_linux.cpp  rw_in_svgalib.c  rw_in_svgalib.cpp  rw_linux.h  rw_linux.hpp  rw_svgalib.cpp  rw_x11.cpp  snd_linux.c  snd_linux.cpp  sys_linux.c  sys_linux.cpp  vid_menu.cpp  vid_so.c  vid_so.cpp
mathlib/: CMakeLists.txt
null/: cd_null.cpp  cl_null.c  cl_null.cpp  glimp_null.cpp  in_null.cpp  snddma_null.cpp  swimp_null.cpp  sys_null.cpp  vid_null.c  vid_null.cpp
qcommon/: CMakeLists.txt  cmd.c  cmd.cpp  cmodel.c  cmodel.cpp  common.c  common.cpp  crc.c  crc.cpp  crc.h  crc.hpp  cvar.c  cvar.cpp  files.c  files.cpp  md4.cpp  net_chan.c  net_chan.cpp  pmove.c  pmove.cpp  qcommon.h  qcommon.hpp  qfiles.h  qfiles.hpp
quake2/: CMakeLists.txt
quake2/inc/quake2/client/: cl_scrn.h  client.h  keys.h
quake2/inc/quake2/input/: input.h
quake2/inc/sound/: cd_win.h
quake2/src/: console.c  main.c  sys_win.c  x86.c
quake2/src/client/: cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_inv.c  cl_main.c  cl_newfx.c  cl_parse.c  cl_pred.c  cl_scrn.c  cl_tent.c  cl_view.c
quake2/src/input/: in_win.c  keys.c
quake2/src/sound/: cd_win.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_win.c
quake2/src/ui/: menu.c  qmenu.c
quake2/src/video/: vid_dll.c  vid_menu.c
ref_gl/: CMakeLists.txt  anorms.h  anormtab.h  anormtab.hpp  gl_draw.c  gl_draw.cpp  gl_image.c  gl_image.cpp  gl_light.c  gl_light.cpp  gl_local.h  gl_local.hpp  gl_mesh.c  gl_mesh.cpp  gl_model.c  gl_model.cpp  gl_model.h  gl_model.hpp  gl_rmain.c  gl_rmain.cpp  gl_rmisc.c  gl_rmisc.cpp  gl_rsurf.c  gl_rsurf.cpp  gl_warp.c  gl_warp.cpp  glw_imp.c  glw_imp_linux.c  glw_imp_win.c  qgl.h  qgl.hpp  warpsin.h  warpsin.hpp
ref_soft/: CMakeLists.txt  adivtab.h  adivtab.hpp  anorms.h  anorms.hpp  asm_draw.h  asm_draw.hpp  d_ifacea.h  d_ifacea.hpp  qasm.inc  r_aclip.cpp  r_alias.c  r_alias.cpp  r_bsp.c  r_bsp.cpp  r_draw.c  r_draw.cpp  r_edge.c  r_edge.cpp  r_image.c  r_image.cpp  r_light.c  r_light.cpp  r_local.h  r_local.hpp  r_main.c  r_main.cpp  r_misc.c  r_misc.cpp  r_model.c  r_model.cpp  r_model.h  r_model.hpp  r_part.cpp  r_poly.c  r_poly.cpp  r_polyse.cpp  r_rast.c  r_rast.cpp  r_scan.cpp  (+7 more)
rhapsody/: in_next.m  r_next.m  snd_next.m  swimp_rhap.m  vid_next.m
server/: server.cpp  server.h  server.hpp  sv_ccmds.c  sv_ccmds.cpp  sv_ents.c  sv_ents.cpp  sv_game.c  sv_game.cpp  sv_game.h  sv_game.hpp  sv_init.c  sv_init.cpp  sv_main.c  sv_main.cpp  sv_send.c  sv_send.cpp  sv_user.c  sv_user.cpp  sv_world.c  sv_world.cpp
shared/: CMakeLists.txt  anorms.h  client_persistant.h  client_persistant.hpp  client_respawn.h  client_respawn.hpp  clipplane.hpp  defines.c  defines.cpp  defines.h  defines.hpp  dlight.hpp  dmodel.h  dmodel.hpp  edict.cpp  edict.h  edict.hpp  entity.hpp  entity_state.hpp  enum_image_type.hpp  enum_multicast.hpp  enum_rserr.h  enum_rserr.hpp  g_client.h  g_client.hpp  game_import.hpp  gitem.h  gitem.hpp  glpoly.h  glpoly.hpp  image.h  image.hpp  mleaf.h  mleaf.hpp  mmove.h  mmove.hpp  mnode.h  mnode.hpp  (+35 more)
win32/: CMakeLists.txt  cd_win.c  cd_win.cpp  conproc.cpp  conproc.h  conproc.hpp  glw_imp.c  glw_imp.cpp  glw_win.h  glw_win.hpp  in_win.c  in_win.cpp  net_wins.c  net_wins.cpp  q_shwin.c  q_shwin.cpp  q_shwin.hpp  qgl_win.c  qgl_win.cpp  resource.h  resource.hpp  rw_ddraw.c  rw_ddraw.cpp  rw_dib.c  rw_dib.cpp  rw_imp.c  rw_imp.cpp  rw_win.h  rw_win.hpp  snd_win.c  snd_win.cpp  sys_win.c  sys_win.cpp  sys_win.h  vid_dll.c  vid_dll.cpp  vid_menu.c  vid_menu.cpp  winquake.h  winquake.hpp
(+158 files in other folders)
